--- a/ZooBazaar_Solution/ZooBazaar_ClassLibrary/ZooBazaar_ClassLibrary.csproj
+++ b/ZooBazaar_Solution/ZooBazaar_ClassLibrary/ZooBazaar_ClassLibrary.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ZooBazaar_Interfaces\ZooBazaar_Interfaces.csproj" />
+  </ItemGroup>
+
 </Project>
