--- a/ZooBazaar_Solution/ZooBazaar_Windows_Forms_Application/ZooBazaar_Windows_Forms_Application.csproj
+++ b/ZooBazaar_Solution/ZooBazaar_Windows_Forms_Application/ZooBazaar_Windows_Forms_Application.csproj
@@ -8,4 +8,13 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Update="controls\AnimalActivityTable.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Update="controls\AnimalButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
+  </ItemGroup>
+
 </Project>
