--- a/ZooBazaar_Solution/ZooBazaar_ClassLibrary/ZooBazaar_ClassLibrary.csproj
+++ b/ZooBazaar_Solution/ZooBazaar_ClassLibrary/ZooBazaar_ClassLibrary.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ZooBazaar_Interfaces\ZooBazaar_Interfaces.csproj" />
+    <ProjectReference Include="..\DomainModels\ZooBazaar_DomainModels.csproj" />
+    <ProjectReference Include="..\ZooBazaar_Repositories\ZooBazaar_Repositories.csproj" />
   </ItemGroup>
 
 </Project>
