--- a/ZooBazaar_Solution/ZooBazaar_Windows_Forms_Application/ZooBazaar_Windows_Forms_Application.csproj
+++ b/ZooBazaar_Solution/ZooBazaar_Windows_Forms_Application/ZooBazaar_Windows_Forms_Application.csproj
@@ -15,6 +15,9 @@
     <Compile Update="controls\AnimalButton.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Update="EmployeeAddControls\MainMenuTable.cs">
+      <SubType>Component</SubType>
+    </Compile>
   </ItemGroup>
 
 </Project>
