Grzegorz - Add animal tests and small corrections in AnimalRepository

--- a/ZooBazaar_Solution/ZooBazaar_Windows_Forms_Application/ZooBazaar_Windows_Forms_Application.csproj
+++ b/ZooBazaar_Solution/ZooBazaar_Windows_Forms_Application/ZooBazaar_Windows_Forms_Application.csproj
@@ -9,6 +9,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ZooBazaar_ClassLibrary\ZooBazaar_ClassLibrary.csproj" />
+    <ProjectReference Include="..\ZooBazaar_Interfaces\ZooBazaar_DTO.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="AnimalAddControls\AddAnimalButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Update="AnimalAddControls\MainMenuTable.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Update="controls\AnimalActivityTable.cs">
       <SubType>Component</SubType>
     </Compile>
