--- a/ZooBazaar_Solution/ZooBazaar_Windows_Forms_Application/ZooBazaar_Windows_Forms_Application.csproj
+++ b/ZooBazaar_Solution/ZooBazaar_Windows_Forms_Application/ZooBazaar_Windows_Forms_Application.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DomainModels\ZooBazaar_DomainModels.csproj" />
     <ProjectReference Include="..\ZooBazaar_ClassLibrary\ZooBazaar_ClassLibrary.csproj" />
     <ProjectReference Include="..\ZooBazaar_Interfaces\ZooBazaar_DTO.csproj" />
   </ItemGroup>
