Grzegorz - Begining of schedule rework

--- a/ZooBazaar_Solution/ZooBazaar_Windows_Forms_Application/ZooBazaar_Windows_Forms_Application.csproj
+++ b/ZooBazaar_Solution/ZooBazaar_Windows_Forms_Application/ZooBazaar_Windows_Forms_Application.csproj
@@ -36,6 +36,27 @@
     <Compile Update="EmployeeAddControls\MainMenuTable.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Update="Schedule\ActivityTable.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Update="Schedule\BlockButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Update="Schedule\DayTable.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Update="Schedule\MainScheduleTable.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Update="Schedule\NavBarTable.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Update="Schedule\ScheduleTable.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Update="Schedule\TimeTable.cs">
+      <SubType>Component</SubType>
+    </Compile>
   </ItemGroup>
 
 </Project>
