--- a/ZooBazaar_Solution/ZooBazaar_ASP_NET/ZooBazaar_ASP_NET.csproj
+++ b/ZooBazaar_Solution/ZooBazaar_ASP_NET/ZooBazaar_ASP_NET.csproj
@@ -6,4 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Images\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\Images\ScheduleIcon.png" />
+  </ItemGroup>
+
 </Project>
