Managing electron menu bar and improved compiling

--- a/ZooBazaar_Solution/ZooBazaar_Desktop_App/ZooBazaar_Desktop_App.csproj
+++ b/ZooBazaar_Solution/ZooBazaar_Desktop_App/ZooBazaar_Desktop_App.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\Images\ScheduleIcon.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\Images\ScheduleIcon.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="ElectronNET.API" Version="13.5.1" />
   </ItemGroup>
 
