--- a/ZooBazaar_Solution/ZooBazaar_Desktop_App/ZooBazaar_Desktop_App.csproj
+++ b/ZooBazaar_Solution/ZooBazaar_Desktop_App/ZooBazaar_Desktop_App.csproj
@@ -1,21 +1,21 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
-
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-
   <ItemGroup>
     <Content Remove="wwwroot\Images\ScheduleIcon.png" />
   </ItemGroup>
-
   <ItemGroup>
     <None Include="wwwroot\Images\ScheduleIcon.png" />
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="ElectronNET.API" Version="13.5.1" />
   </ItemGroup>
-
+  <ItemGroup>
+    <Content Update="electron.manifest.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
