--- a/ZooBazaar_Solution/ZooBazaar_Desktop_App/ZooBazaar_Desktop_App.csproj
+++ b/ZooBazaar_Solution/ZooBazaar_Desktop_App/ZooBazaar_Desktop_App.csproj
@@ -5,13 +5,21 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
+    <Content Remove="App.config" />
     <Content Remove="wwwroot\Images\ScheduleIcon.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="wwwroot\Images\ScheduleIcon.png" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="ElectronNET.API" Version="13.5.1" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DomainModels\ZooBazaar_DomainModels.csproj" />
+    <ProjectReference Include="..\ZooBazaar_ClassLibrary\ZooBazaar_ClassLibrary.csproj" />
+    <ProjectReference Include="..\ZooBazaar_Interfaces\ZooBazaar_DTO.csproj" />
+    <ProjectReference Include="..\ZooBazaar_Repositories\ZooBazaar_Repositories.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Content Update="electron.manifest.json">
