--- a/ZooBazaar_Solution/ZooBazaar_ASP_NET/ZooBazaar_ASP_NET.csproj
+++ b/ZooBazaar_Solution/ZooBazaar_ASP_NET/ZooBazaar_ASP_NET.csproj
@@ -16,7 +16,9 @@
 
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="wwwroot\Images\ScheduleIcon.png" />
+    <None Include="wwwroot\Images\ScheduleIcon.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
