--- a/ZooBazaar_Solution/ZooBazaar_Windows_Forms_Application/ZooBazaar_Windows_Forms_Application.csproj
+++ b/ZooBazaar_Solution/ZooBazaar_Windows_Forms_Application/ZooBazaar_Windows_Forms_Application.csproj
@@ -70,6 +70,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Form1.resx">
+      <Generator></Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
